--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -78,7 +78,7 @@
       "description": "Only compile",
       "steps": [
         {
-          "exec": "packemon build --loadConfigs --no-addFiles --no-addExports"
+          "exec": "packemon build --loadConfigs"
         }
       ]
     },
@@ -108,7 +108,18 @@
       "description": "Runs eslint against the codebase",
       "steps": [
         {
-          "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern src test build-tools projenrc .projenrc.ts"
+          "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern src tests build-tools projenrc .projenrc.ts"
+        }
+      ]
+    },
+    "format": {
+      "name": "format",
+      "steps": [
+        {
+          "exec": "prettier --write --cache --no-error-on-unmatched-pattern --ignore-unknown . || true"
+        },
+        {
+          "spawn": "eslint"
         }
       ]
     },
@@ -177,7 +188,22 @@
     },
     "test": {
       "name": "test",
-      "description": "Run tests"
+      "description": "Run tests",
+      "steps": [
+        {
+          "exec": "vitest run",
+          "receiveArgs": true
+        }
+      ]
+    },
+    "test:watch": {
+      "name": "test:watch",
+      "description": "Run vitest in watch mode",
+      "steps": [
+        {
+          "exec": "vitest watch"
+        }
+      ]
     },
     "unbump": {
       "name": "unbump",
@@ -206,19 +232,19 @@
           "exec": "npm update npm-check-updates"
         },
         {
-          "exec": "npm-check-updates --dep dev --upgrade --target=minor"
+          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='execa'"
         },
         {
-          "exec": "npm-check-updates --dep optional --upgrade --target=minor"
+          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='execa'"
         },
         {
-          "exec": "npm-check-updates --dep peer --upgrade --target=minor"
+          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='execa'"
         },
         {
-          "exec": "npm-check-updates --dep prod --upgrade --target=minor"
+          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='execa'"
         },
         {
-          "exec": "npm-check-updates --dep bundle --upgrade --target=minor"
+          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='execa'"
         },
         {
           "exec": "npm install"
