--- a/.gitignore
+++ b/.gitignore
@@ -32,18 +32,22 @@ jspm_packages/
 .cache
 !/.projenrc.js
 !/.github/workflows/build.yml
+/dist/changelog.md
+/dist/version.txt
 !/.github/workflows/release.yml
 !/.mergify.yml
 !/.github/workflows/upgrade-main.yml
 !/.prettierignore
 !/.prettierrc.json
 !/.npmrc
-!/test/
+!/tests/
 !/tsconfig.json
 !/src/
 /lib
 !/.eslintrc.json
-!/dist/
+!/vitest.config.ts
+/dist/
+/mjs
 !/action.yml
 !/./packemon.config.ts
 /.idea
