--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      id-token: write
     outputs:
       latest_commit: ${{ steps.git_remote.outputs.latest_commit }}
     env:
@@ -26,6 +27,12 @@ jobs:
           git config user.email "github-actions@github.com"
       - name: Install dependencies
         run: npm ci
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        run: ls
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE }}
+          aws-region: ${{ vars.AWS_REGION }}
       - name: release
         run: npx projen release
       - name: Check for new commits
