--- a/package.json
+++ b/package.json
@@ -63,13 +63,13 @@
     "@actions/github": "^5.1.1",
     "zod": "^3.21.4"
   },
-  "main": "./mjs/index.mjs",
+  "main": "./lib/index.js",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
   },
   "version": "0.0.0",
-  "types": "lib/index.d.ts",
+  "types": "mjs/index.mjs.d.ts",
   "packemon": {
     "format": "mjs",
     "platform": "node",
