--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@vercel/ncc": "^0.36.1",
     "@vladcos/eslint-config": "^0.0.4",
     "@vladcos/prettier-config": "^0.0.8",
-    "@vladcos/projen-base": "^0.0.48",
+    "@vladcos/projen-base": "^0.0.50",
     "@vladcos/tsconfig": "^0.0.3",
     "alias-hq": "^6.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -46,7 +46,7 @@
     "npm-check-updates": "^16",
     "packemon": "^3.1.1",
     "prettier": "^2.8.8",
-    "projen": "^0.71.105",
+    "projen": "^0.71.106",
     "standard-version": "^9",
     "ts-extras": "^0.11.0",
     "ts-node": "^10.9.1",
@@ -63,7 +63,7 @@
     "@actions/github": "^5.1.1",
     "zod": "^3.21.4"
   },
-  "main": "./lib/index.js",
+  "main": "./mjs/index.mjs",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
