--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,6 @@ jspm_packages/
 .cache
 !/.projenrc.js
 !/.github/workflows/build.yml
-/dist/changelog.md
-/dist/version.txt
 !/.github/workflows/release.yml
 !/.mergify.yml
 !/.github/workflows/upgrade-main.yml
@@ -46,8 +44,8 @@ jspm_packages/
 /lib
 !/.eslintrc.json
 !/vitest.config.ts
-/dist/
 /mjs
 !/action.yml
 !/./packemon.config.ts
 /.idea
+!/dist/
