--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,6 +93,6 @@ jobs:
       - uses: ./
         with:
           from-local-path: ${{ runner.temp }}/test
-          to-s3-uri: ${{ vars.AWS_BUCKET }}
+          to-s3-uri: s3://${{ vars.AWS_BUCKET }}/
           distribution-id: ${{ vars.AWS_DISTRIBUTION }}
       - run: aws s3 rm ${{ vars.AWS_BUCKET }} --recursive
