--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,7 +92,7 @@ jobs:
           touch ${{ runner.temp }}/test/foo.bar
       - uses: ./
         with:
-          from-local-path: ${{ runner.temp }}/test
-          to-s3-uri: s3://${{ vars.AWS_BUCKET }}/
+          source: ${{ runner.temp }}/test
+          target: s3://${{ vars.AWS_BUCKET }}/
           distribution-id: ${{ vars.AWS_DISTRIBUTION }}
       - run: aws s3 rm s3://${{ vars.AWS_BUCKET }}/ --recursive
