--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,5 +94,5 @@ jobs:
         with:
           source: ${{ runner.temp }}/test
           target: s3://${{ vars.AWS_BUCKET }}/
-          distribution-id: ${{ vars.AWS_DISTRIBUTION }}
+          distribution: ${{ vars.AWS_DISTRIBUTION }}
       - run: aws s3 rm s3://${{ vars.AWS_BUCKET }}/ --recursive
