--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,7 @@
 
 name: release
 on:
+  push: {}
   workflow_dispatch: {}
 jobs:
   release:
@@ -18,9 +19,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Plan
+      - name: Check if branch exists
         id: branch_exists
-        run: |
-          set +e
-          git show-ref --quiet refs/heads/main
-          echo "exitcode=$?" >> $GITHUB_OUTPUT
+        run: git show-ref --quiet refs/heads/main
+        continue-on-error: true
+      - name: Create a branch if necessary
+        if: steps.branch_exists.outcome == 'failure'
+        run: git switch --orphan releases
