--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,5 @@ jobs:
         run: git show-ref --quiet refs/heads/main
         continue-on-error: true
       - name: Create a branch if necessary
-        if: steps.branch_exists.outcome == 'failure'
+        if: steps.branch_exists.outcome != 'success'
         run: git switch --orphan releases
