--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           fetch-depth: 0
       - name: Check if branch exists
         id: branch_exists
-        run: git show-ref --quiet refs/heads/main
+        run: git show-ref --quiet refs/heads/releases
         continue-on-error: true
       - name: Create a branch if necessary
         if: steps.branch_exists.outcome != 'success'
