--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,5 +26,6 @@ jobs:
       - name: Create a branch if necessary
         if: steps.branch_exists.outcome != 'success'
         run: git switch --orphan releases
-      - run: git add -A && git commit --allow-empty -m "root commit"
-      - run: git push
+      - uses: EndBug/add-and-commit@v9
+        with:
+          commit: '--allow-empty'
