--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,5 @@ jobs:
         run: git switch --orphan releases
       - uses: EndBug/add-and-commit@v9
         with:
-          commit: '--allow-empty'
+          commit: --allow-empty
+          push: origin releases --set-upstream --force
