--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: releases
       - name: Check if branch exists
         id: branch_exists
         run: git show-ref --quiet refs/heads/releases
