--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
         id: branch_exists
         uses: actions/checkout@v3
         with:
-          clean: false
+          path: repo
           fetch-depth: 0
           ref: releases
         continue-on-error: true
@@ -78,11 +78,12 @@ jobs:
         if: steps.branch_exists.outcome != 'success'
         uses: actions/checkout@v3
         with:
-          clean: false
+          path: repo
           fetch-depth: 0
       - name: Create a branch if necessary
         if: steps.branch_exists.outcome != 'success'
         run: git switch --orphan releases
+        working-directory: ./repo
       - run: ls -la
       - uses: EndBug/add-and-commit@v9
         with:
