--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -188,22 +188,7 @@
     },
     "test": {
       "name": "test",
-      "description": "Run tests",
-      "steps": [
-        {
-          "exec": "vitest run",
-          "receiveArgs": true
-        }
-      ]
-    },
-    "test:watch": {
-      "name": "test:watch",
-      "description": "Run vitest in watch mode",
-      "steps": [
-        {
-          "exec": "vitest watch"
-        }
-      ]
+      "description": "Run tests"
     },
     "unbump": {
       "name": "unbump",
