--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "pre-compile": "npx projen pre-compile",
     "release": "npx projen release",
     "test": "npx projen test",
-    "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
@@ -53,9 +52,7 @@
     "tsconfig-paths": "^3.14.2",
     "tsx": "^3.12.7",
     "type-fest": "^0.21.3",
-    "typescript": "^5.1.3",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.32.2"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
