--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,16 +86,20 @@ jobs:
         working-directory: ./repo
       - run: find . -mindepth 1 -maxdepth 1 -exec mv -t .. -- {} +
         working-directory: ./repo
-      - run: find . -mindepth 1 -maxdepth 1 -exec cp -t .. -- {} +
-        working-directory: ./dist
+      - name: Cleanup
+        run: git rm -r --cached .
+      - run: git restore --source main action.yml
       - run: ls -la
       - id: commit
         uses: EndBug/add-and-commit@v9
         with:
           push: origin releases --set-upstream --force
+          add: dist action.yml
+        env:
+          GITHUB_REF: ${{ steps.commit.outputs.commit_sha }}
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_REF: ${{ steps.commit.outputs.commit_sha }}
+          GITHUB_REF: ${{ github.ref }}
         run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
