--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,6 +88,7 @@ jobs:
         working-directory: ./repo
       - name: Cleanup
         run: git rm -r --cached .
+        continue-on-error: true
       - run: git restore --source main action.yml
       - run: ls -la
       - id: commit
