--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,8 +85,8 @@ jobs:
         run: git switch --orphan releases
         working-directory: ./repo
       - run: mv ./repo/.git ./.git
-      - run: git restore --source main action.yml
       - run: ls -la
+      - run: git checkout main -- action.yml
       - id: commit
         uses: EndBug/add-and-commit@v9
         with:
