--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,21 +80,27 @@ jobs:
         with:
           path: repo
           fetch-depth: 0
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          path: main
       - name: Create a branch if necessary
         if: steps.branch_exists.outcome != 'success'
         run: git switch --orphan releases
         working-directory: ./repo
       - run: mv ./repo/.git ./.git
       - run: ls -la
-      - run: git checkout main -- action.yml
+      - run: cp ./main/action.yml action.yml
       - id: commit
         uses: EndBug/add-and-commit@v9
         with:
           push: origin releases --set-upstream --force
           add: dist action.yml
+        env:
+          GITHUB_REF: ${{ steps.commit.outputs.commit_sha }}
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_REF: ${{ steps.commit.outputs.commit_sha }}
+          GITHUB_REF: ${{ github.ref }}
         run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
