--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,7 @@ jobs:
         with:
           name: build-artifact
           path: dist
+    needs: test_list
   release_github:
     name: Publish to GitHub Releases
     needs: release
@@ -104,3 +105,50 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_REF: ${{ github.ref }}
         run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
+  test_list:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    env:
+      CI: "true"
+    steps:
+      - uses: actions/checkout@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE }}
+          aws-region: ${{ vars.AWS_REGION }}
+      - run: |-
+          mkdir ${{ runner.temp }}/test/
+          touch ${{ runner.temp }}/test/foo.bar
+      - uses: ./
+        with:
+          source: ${{ runner.temp }}/test
+          target: s3://${{ vars.AWS_BUCKET }}/
+          distribution: ${{ vars.AWS_DISTRIBUTION }}
+      - run: aws s3 rm s3://${{ vars.AWS_BUCKET }}/ --recursive
+  marketplaceTest:
+    needs: test_list
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    env:
+      CI: "true"
+    steps:
+      - uses: actions/checkout@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE }}
+          aws-region: ${{ vars.AWS_REGION }}
+      - run: |-
+          mkdir ${{ runner.temp }}/test/
+          touch ${{ runner.temp }}/test/foo.bar
+      - uses: vladcosorg/action-s3-cloudfront-smart-deploy@v1.1.5
+        with:
+          source: ${{ runner.temp }}/test
+          target: s3://${{ vars.AWS_BUCKET }}/
+          distribution: ${{ vars.AWS_DISTRIBUTION }}
+      - run: aws s3 rm s3://${{ vars.AWS_BUCKET }}/ --recursive
