--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ jspm_packages/
 .cache
 !/.projenrc.js
 !/.github/workflows/build.yml
+/dist/changelog.md
+/dist/version.txt
 !/.github/workflows/release.yml
 !/.mergify.yml
 !/.github/workflows/upgrade-main.yml
@@ -43,9 +45,9 @@ jspm_packages/
 !/src/
 /lib
 !/.eslintrc.json
+/dist/
 /mjs
 !/action.yml
 !/./packemon.config.ts
 /.idea
-!/dist/
 !/.github/workflows/marketplace-test.yml
