--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,9 +101,10 @@ jobs:
           add: dist action.yml
           tag: v${{ steps.major.outputs.version }} --force
           tag_push: --force
-      - run: gh release create lol1 --target ${{ steps.commit.outputs.commit_long_sha }}
-        env:
+      - env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REF: latest
+        run: gh release create lol1 --target ${{ steps.commit.outputs.commit_long_sha }}
         if: steps.commit.outputs.committed == 'true'
       - name: Release
         env:
