--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,7 +104,7 @@ jobs:
       - if: steps.commit.outputs.committed == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release create lol1 -F dist/changelog.md -t lol1 --target ${{ steps.commit.outputs.commit_long_sha }}
+        run: gh release create lolM -F dist/changelog.md -t lolA --target ${{ steps.commit.outputs.commit_long_sha }}
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
