--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -220,7 +220,7 @@
           "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='execa'"
         },
         {
-          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='execa'"
+          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='execa'"
         },
         {
           "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='execa'"
@@ -229,13 +229,13 @@
           "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='execa'"
         },
         {
-          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='execa'"
+          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='execa'"
         },
         {
           "exec": "npm install"
         },
         {
-          "exec": "npm update"
+          "exec": "npm update @bleed-believer/path-alias @swc/core @types/lodash @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser @vercel/ncc @vladcos/eslint-config @vladcos/prettier-config @vladcos/projen-base @vladcos/tsconfig alias-hq babel-plugin-module-resolver eslint-config-prettier eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import eslint execa fs-jetpack lodash npm-check-updates packemon prettier projen standard-version ts-extras ts-node tsconfig-paths tsx type-fest typescript @actions/core @actions/exec @actions/github zod"
         },
         {
           "exec": "npx projen"
