--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,14 +107,14 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_REF: ${{ steps.commit.outputs.commit_long_sha }}
         run: |-
-          gh release create lolM4 -F dist/changelog.md  -t tiiitle --target $GITHUB_REF -R $GITHUB_REPOSITORY
+          gh release create lolM4 -F dist/changelog.md  -t tiiitle --target latest -R $GITHUB_REPOSITORY
           echo $GITHUB_REF
           echo "$GITHUB_REF"
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_REF: ${{ steps.commit.outputs.commit_long_sha }}
+          GITHUB_REF: latest
         run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
         if: steps.commit.outputs.committed == 'true'
   test_list:
