--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_REF: latest
-        run: errout=$(mktemp); gh release create "1112" -R $GITHUB_REPOSITORY --notes "FgaFFF" -t "TTTTT1" --target lol 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
+          GITHUB_REF: d2d61a9955adea846885f3b413db690c530e86e7
+        run: errout=$(mktemp); gh release create "11123" -R $GITHUB_REPOSITORY --notes "FgaFFF" -t "TTTTT13" --target lol 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
