--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,6 @@
 /.gitattributes linguist-generated
 /.github/workflows/auto-approve.yml linguist-generated
 /.github/workflows/build.yml linguist-generated
-/.github/workflows/marketplace-test.yml linguist-generated
 /.github/workflows/release.yml linguist-generated
 /.github/workflows/upgrade-main.yml linguist-generated
 /.gitignore linguist-generated
@@ -25,3 +24,4 @@
 /package-lock.json linguist-generated
 /package.json linguist-generated
 /tsconfig.json linguist-generated
+/vitest.config.ts linguist-generated
