--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,21 +101,12 @@ jobs:
           add: dist action.yml
           tag: v${{ steps.major.outputs.version }} --force
           tag_push: --force
-      - if: steps.commit.outputs.committed == 'true'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_REF: ${{ steps.commit.outputs.commit_long_sha }}
-        run: |-
-          gh release create lolM4 -F dist/changelog.md  -t tiiitle --target latest -R $GITHUB_REPOSITORY
-          echo $GITHUB_REF
-          echo "$GITHUB_REF"
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_REF: latest
-        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
+          GITHUB_REF: ${{ github.ref }}
+        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target ${{ steps.commit.outputs.commit_long_sha }} 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
         if: steps.commit.outputs.committed == 'true'
   test_list:
     runs-on: ubuntu-latest
@@ -134,7 +125,7 @@ jobs:
       - run: |-
           mkdir ${{ runner.temp }}/test/
           touch ${{ runner.temp }}/test/foo.bar
-      - uses: ./
+      - uses: vladcosorg/action-s3-cloudfront-smart-deploy@latest
         with:
           source: ${{ runner.temp }}/test
           target: s3://${{ vars.AWS_BUCKET }}/
