--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pre-compile": "npx projen pre-compile",
     "release": "npx projen release",
     "test": "npx projen test",
+    "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
@@ -46,13 +47,16 @@
     "packemon": "^3.2.1",
     "prettier": "^2.8.8",
     "projen": "^0.72.19",
+    "replace-in-file": "^7.0.1",
     "standard-version": "^9",
     "ts-extras": "^0.11.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^3.14.2",
     "tsx": "^3.12.7",
     "type-fest": "^0.21.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.33.0"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
