--- a/package.json
+++ b/package.json
@@ -22,45 +22,39 @@
     "projen": "npx projen"
   },
   "devDependencies": {
-    "@bleed-believer/path-alias": "^0.15.2",
-    "@swc/core": "^1.3.80",
-    "@types/lodash": "^4.14.197",
+    "@swc/core": "^1.3.83",
+    "@types/lodash": "^4.14.198",
     "@types/node": "^16",
-    "@typescript-eslint/eslint-plugin": "^5",
-    "@typescript-eslint/parser": "^5",
-    "@vercel/ncc": "^0.36.1",
-    "@vladcos/eslint-config": "^0.0.4",
-    "@vladcos/prettier-config": "^0.0.8",
-    "@vladcos/projen-github-action": "^0.0.1",
-    "@vladcos/tsconfig": "^0.0.4",
-    "alias-hq": "^6.2.2",
-    "babel-plugin-module-resolver": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^6",
+    "@typescript-eslint/parser": "^6",
+    "@vercel/ncc": "^0.38.0",
+    "@vladcos/eslint-config": "latest",
+    "@vladcos/prettier-config": "latest",
+    "@vladcos/projen-github-action": "^0.0.3",
+    "@vladcos/tsconfig": "latest",
+    "alias-hq": "^6",
+    "babel-plugin-module-resolver": "^5",
     "eslint": "^8",
-    "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.28.1",
     "execa": "7",
     "fs-jetpack": "^5.1.0",
     "lodash": "^4.17.21",
     "npm-check-updates": "^16",
-    "packemon": "^3.2.1",
-    "prettier": "^2.8.8",
-    "projen": "0.72.19",
+    "packemon": "^3",
+    "prettier": "^3",
+    "projen": "^0.73.11",
     "replace-in-file": "^7.0.1",
     "standard-version": "^9",
     "ts-extras": "^0.11.0",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^3.14.2",
-    "tsx": "^3.12.7",
+    "tsconfig-paths": "^4",
+    "tsx": "^3",
     "type-fest": "^0.21.3",
     "typescript": "^5.2.2",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.3",
+    "vite-tsconfig-paths": "4",
+    "vitest": "^0.34",
     "zod-to-json-schema": "^3.21.4"
-  },
-  "peerDependencies": {
-    "projen": "0.72.19"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
