--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -233,13 +233,13 @@
           "exec": "npm update npm-check-updates"
         },
         {
-          "exec": "npm-check-updates --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@swc/core,@types/lodash,@types/node,@typescript-eslint/eslint-plugin,@typescript-eslint/parser,@vercel/ncc,@vladcos/projen-github-action,alias-hq,babel-plugin-module-resolver,eslint-import-resolver-node,eslint-import-resolver-typescript,eslint,fs-jetpack,lodash,npm-check-updates,packemon,prettier,projen,replace-in-file,standard-version,ts-extras,ts-node,tsconfig-paths,tsx,type-fest,typescript,vitest,zod-to-json-schema,@actions/core,@actions/exec,@actions/github,zod"
+          "exec": "npm-check-updates --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@types/lodash,@types/node,@typescript-eslint/eslint-plugin,@typescript-eslint/parser,@vercel/ncc,@vladcos/projen-github-action,alias-hq,babel-plugin-module-resolver,eslint-import-resolver-node,eslint-import-resolver-typescript,eslint,fs-jetpack,lodash,npm-check-updates,packemon,prettier,projen,replace-in-file,standard-version,ts-extras,ts-node,tsconfig-paths,tsx,type-fest,typescript,vitest,zod-to-json-schema,@actions/core,@actions/exec,@actions/github,zod"
         },
         {
           "exec": "npm install"
         },
         {
-          "exec": "npm update @swc/core @types/lodash @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser @vercel/ncc @vladcos/projen-github-action alias-hq babel-plugin-module-resolver eslint-import-resolver-node eslint-import-resolver-typescript eslint fs-jetpack lodash npm-check-updates packemon prettier projen replace-in-file standard-version ts-extras ts-node tsconfig-paths tsx type-fest typescript vitest zod-to-json-schema @actions/core @actions/exec @actions/github zod"
+          "exec": "npm update @types/lodash @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser @vercel/ncc @vladcos/projen-github-action alias-hq babel-plugin-module-resolver eslint-import-resolver-node eslint-import-resolver-typescript eslint fs-jetpack lodash npm-check-updates packemon prettier projen replace-in-file standard-version ts-extras ts-node tsconfig-paths tsx type-fest typescript vitest zod-to-json-schema @actions/core @actions/exec @actions/github zod"
         },
         {
           "exec": "npx projen"
