--- a/.github/workflows/upgrade-main.yml
+++ b/.github/workflows/upgrade-main.yml
@@ -20,6 +20,11 @@ jobs:
           ref: main
       - name: Install dependencies
         run: npm ci
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE }}
+          aws-region: ${{ vars.AWS_REGION }}
       - name: Upgrade dependencies
         run: npx projen upgrade
       - name: Find mutations
