--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
     "@vercel/ncc": "^0.38.1",
-    "@vladcos/eslint-config": "latest",
-    "@vladcos/prettier-config": "latest",
-    "@vladcos/projen-github-action": "^0.0.6",
-    "@vladcos/tsconfig": "latest",
+    "@vladcos/eslint-config": "^0.0.16",
+    "@vladcos/prettier-config": "^0.0.17",
+    "@vladcos/projen-github-action": "^0.0.7",
+    "@vladcos/tsconfig": "^0.0.14",
     "alias-hq": "^6",
     "babel-plugin-module-resolver": "^5",
     "constructs": "^10.0.0",
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "execa": "7",
+    "execa": "8",
     "fs-jetpack": "^5.1.0",
     "lodash": "^4.17.21",
     "packemon": "^3",
@@ -48,7 +48,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4",
     "tsx": "^4",
-    "type-fest": "^0.21.3",
+    "type-fest": "^4.8.3",
     "typescript": "^5.3.2",
     "vite-tsconfig-paths": "4",
     "vitest": "^0.34",
@@ -57,7 +57,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
-    "@actions/github": "^5.1.1",
+    "@actions/github": "6",
     "zod": "^3.22.4"
   },
   "main": "./mjs/index.mjs",
