chore: use latest branch for testing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,6 +133,8 @@ jobs:
       CI: "true"
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: latest
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
